--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,8 @@
     xmlns:gauge="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.example.salmankhalid.ui_test.MainActivity">
+    tools:context="com.example.salmankhalid.ui_test.MainActivity"
+    android:orientation="vertical">
 
     <LinearLayout
         android:orientation="vertical"
@@ -60,15 +60,6 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1">
 
-                    <TextView
-                        android:text="Temperature Monitor"
-                        android:gravity="center"
-                        android:textColor="@android:color/black"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/textView7"
-                        android:layout_weight="1" />
-
                     <com.example.salmankhalid.ui_test.library.GaugeView
                         android:id="@+id/g_temp"
                         android:layout_width="200dp"
@@ -97,15 +88,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1">
-
-                    <TextView
-                        android:text="Humidity Monitor"
-                        android:gravity="center"
-                        android:textColor="@android:color/black"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/textView8"
-                        android:layout_weight="1" />
 
                     <com.example.salmankhalid.ui_test.library.GaugeView
                         android:id="@+id/g_humid"
@@ -150,15 +132,6 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1">
 
-                    <TextView
-                        android:text="Water Level"
-                        android:gravity="center"
-                        android:textColor="@android:color/black"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/textView9"
-                        android:layout_weight="1" />
-
                     <com.example.salmankhalid.ui_test.library.GaugeView
                         android:id="@+id/g_water"
                         android:layout_width="200dp"
@@ -189,15 +162,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1">
-
-                    <TextView
-                        android:text="Power Consumption"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/textView10"
-                        android:gravity="center"
-                        android:textColor="@android:color/black"
-                        android:layout_weight="1" />
 
                     <com.example.salmankhalid.ui_test.library.GaugeView
                         android:id="@+id/g_power"
