--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -61,9 +61,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:text="..."
+                android:text=""
                 android:ems="10"
-                android:id="@+id/editText3"
+                android:id="@+id/user"
                 android:layout_weight="1" />
         </LinearLayout>
 
@@ -85,7 +85,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:ems="10"
-                android:id="@+id/editText4"
+                android:id="@+id/pass"
                 android:layout_weight="1" />
         </LinearLayout>
 
@@ -94,6 +94,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/button3" />
+
 
     </LinearLayout>
 
