--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:gauge="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.salmankhalid.ui_test.MainActivity"
+    tools:context="com.SHProject.SmartHome.AppMain.MainActivity"
     android:orientation="vertical">
 
     <LinearLayout
@@ -60,7 +60,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1">
 
-                    <com.example.salmankhalid.ui_test.library.GaugeView
+                    <com.SHProject.SmartHome.AppMain.library.GaugeView
                         android:id="@+id/g_temp"
                         android:layout_width="200dp"
                         android:layout_height="200dp"
@@ -89,7 +89,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1">
 
-                    <com.example.salmankhalid.ui_test.library.GaugeView
+                    <com.SHProject.SmartHome.AppMain.library.GaugeView
                         android:id="@+id/g_humid"
                         android:layout_width="200dp"
                         android:layout_height="200dp"
@@ -132,7 +132,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1">
 
-                    <com.example.salmankhalid.ui_test.library.GaugeView
+                    <com.SHProject.SmartHome.AppMain.library.GaugeView
                         android:id="@+id/g_water"
                         android:layout_width="200dp"
                         android:layout_height="200dp"
@@ -144,7 +144,7 @@
                         gauge:showScale="true"
                         android:layout_weight="1"
                         gauge:showRangeText="true">
-                    </com.example.salmankhalid.ui_test.library.GaugeView>
+                    </com.SHProject.SmartHome.AppMain.library.GaugeView>
 
                     <TextView
                         android:text="Temperature"
@@ -163,7 +163,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1">
 
-                    <com.example.salmankhalid.ui_test.library.GaugeView
+                    <com.SHProject.SmartHome.AppMain.library.GaugeView
                         android:id="@+id/g_power"
                         android:layout_width="200dp"
                         android:layout_height="200dp"
