--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.salmankhalid.ui_test.Main2Activity"
+    tools:context="com.SHProject.SmartHome.AppMain.Main2Activity"
     android:background="?android:attr/colorBackground">
 
     <LinearLayout
