--- a/app/src/main/res/layout/content_switch__control.xml
+++ b/app/src/main/res/layout/content_switch__control.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.salmankhalid.ui_test.Switch_Control"
+    tools:context="com.SHProject.SmartHome.AppMain.Switch_Control"
     android:orientation="vertical"
     tools:showIn="@layout/activity_switch__control">
 
