--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -90,7 +90,7 @@
         </LinearLayout>
 
         <Button
-            android:text="Button"
+            android:text="Log In"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/button3" />
